font change Roboto, scrollBar displays only when nav fixed to top. scrollBar fills to green when the whole page has been viewed

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 }
 @font-face {
   font-family: 'Roboto';
-  src: local('Roboto') url('./fonts/Roboto-Regular.ttf');
+  src: url('./fonts/Roboto.ttf');
 }
 * {
   margin: 0;
